--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
     "description": "A short sample app to demonstrate how to get started with Azure Cosmos DB's SQL API",
     "main": "app.js",
     "scripts": {
-        "start": "node app.js"
+        "start": "npx tsc app.ts & node app.js"
     },
     "dependencies": {
         "@azure/cosmos": "3.9.1",
         "cors": "^2.8.5",
         "express": "^4.18.1",
         "socket.io": "^4.5.1"
+    },
+    "devDependencies": {
+        "typescript": "^4.7.3"
     }
 }
